swagger added for admin side
